Silence illegal reflective access warnings from errorprone.